--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokedex</title>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script> <!-- todo later: use a local copy installed via npm -->
-    <script src="./main.js"></script>  <!-- todo: change to type:module -->
+    <script type="module" src="./main.js"></script>
 </head>
 <body>
   <input id="search" /><button id="searchButon">Search</button>
